主界面基本完成，视频界面基本完成

--- a/ooxx_client/.babelrc
+++ b/ooxx_client/.babelrc
@@ -11,6 +11,8 @@
   "plugins": ["transform-vue-jsx", "transform-runtime",["component", [
     {
       "libraryName": "mint-ui",
+      "libraryName": "element-ui",
+      "styleLibraryName": "theme-chalk",
       "style": true
     }
   ]]]
