--- a/ooxx_client/.babelrc
+++ b/ooxx_client/.babelrc
@@ -8,12 +8,6 @@
     }],
     "stage-2"
   ],
-  "plugins": ["transform-vue-jsx", "transform-runtime",["component", [
-    {
-      "libraryName": "mint-ui",
-      "libraryName": "element-ui",
-      "styleLibraryName": "theme-chalk",
-      "style": true
-    }
-  ]]]
+  "plugins": ["transform-vue-jsx", "transform-runtime"]
 }
+
